<resources>
    <string name="app_name">chatoyant</string>
    <string name="title_home">Home</string>
    <string name="title_mapbox">Mapbox</string>
    <string name="title_exoplayer">ExoPlayer</string>
    <string name="title_camera">Camera</string>
    <string name="title_projection">Projection</string>
    <string name="title_dropbox">Dropbox</string>
    <string name="title_displays">Displays</string>
    <string name="title_properties">Properties</string>
    <string name="title_compose">Compose</string>
    <string name="title_packages">Packages</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_compose">ComposeActivity</string>
</resources>