<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_mapbox"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/title_mapbox" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_exoplayer" />

    <item
        android:id="@+id/navigation_dropbox"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_dropbox" />

    <item
        android:id="@+id/navigation_displays"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/title_displays" />

    <item
        android:id="@+id/navigation_properties"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/title_properties" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/title_camera" />
</menu>