<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    
    <fragment
        android:id="@+id/navigation_mapbox"
        android:name="com.avelon.chatoyant.ui.mapbox.MapboxFragment"
        android:label="@string/title_mapbox"
        tools:layout="@layout/fragment_mapbox" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.avelon.chatoyant.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.avelon.chatoyant.ui.exoplayer.ExoPlayerFragment"
        android:label="@string/title_exoplayer"
        tools:layout="@layout/fragment_exoplayer" />

    <fragment
        android:id="@+id/navigation_dropbox"
        android:name="com.avelon.chatoyant.ui.dropbox.DropboxFragment"
        android:label="@string/title_dropbox"
        tools:layout="@layout/fragment_dropbox" />

    <fragment
        android:id="@+id/navigation_displays"
        android:name="com.avelon.chatoyant.ui.displays.DisplaysFragment"
        android:label="@string/title_displays"
        tools:layout="@layout/fragment_displays" />

    <fragment
        android:id="@+id/navigation_properties"
        android:name="com.avelon.chatoyant.ui.properties.PropertiesFragment"
        android:label="@string/title_properties"
        tools:layout="@layout/fragment_properties" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.avelon.chatoyant.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_compose"
        android:name="com.avelon.chatoyant.ui.compose.ComposeFragment"
        android:label="@string/title_compose"
        tools:layout="@layout/fragment_compose" />

    <fragment
        android:id="@+id/navigation_projection"
        android:name="com.avelon.chatoyant.ui.projection.ProjectionFragment"
        android:label="@string/title_projection"
        tools:layout="@layout/fragment_projection" />

    <fragment
        android:id="@+id/navigation_packages"
        android:name="com.avelon.chatoyant.ui.packages.PackagesFragment"
        android:label="@string/title_packages"
        tools:layout="@layout/fragment_packages" />
</navigation>
